--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^4.10.1",
+    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/native": "^5.6.1",
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^2.3.1",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
