--- a/ios/microblogsocialboticario/Info.plist
+++ b/ios/microblogsocialboticario/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) pode acessar a sua galeria?</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) pode acessar a sua camera?</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) pode salvar fotos na sua galeria?</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
