--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/cli-platform-android": "^4.10.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^2.3.1",
     "react-native-safe-area-context": "^3.0.7",
